[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Blu"
version = "0.03"
description = ""
authors = [
    {name = "Tyler Steffen", email = "tsteffen@naeno.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai-whisper>=20231117",
    "elevenlabs>=0.2.27",
    "matplotlib~=3.8.2",
    "openai~=1.1.1",
    "flask>=2.3.3",
    "transformers>=4.37.2",
    "datasets>=2.16.1",
    "gevent>=23.9.1",
    "flask-cors>=3",
    "anthropic>=0.19.0",
    "torch~=2.2.1",
    "numpy~=1.26.4",
    "pytest>=8.1.1",
    "h5py~=3.10.0",
    "pillow~=10.2.0",
    "pandas~=1.5.3",
    "pip~=24.0",
    "attrs~=23.2.0",
    "distro~=1.9.0",
    "wheel~=0.43.0",
    "cryptography~=42.0.5",
    "tornado~=6.4",
    "Jinja2~=3.1.3",
    "filelock~=3.13.1",
    "setuptools~=69.0.3",
    "packaging~=23.2",
    "pyparsing~=3.1.2",
    "zipp~=3.17.0",
    "build~=1.1.1",
    "Cython~=3.0.9",
    "future~=0.18.3",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/blu"
"Bug Reports" = "https://github.com/yourusername/blu/issues"
"Source" = "https://github.com/yourusername/blu"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]